<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeechHelper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_project">MyProject</string>
    <string name="title_activity_my_projects">MyProjects</string>
    <string name="title_activity_new_project">NewProject</string>
    <string name="title_activity_presentation">Presentation</string>
    <string name="myProjects">My Projects</string>
    <string name="newProject">New Project</string>
    <string name="presentation">Presentation</string>
    <string name="project_name">Project Name:</string>
    <string name="speech_length">Speech Length:</string>
    <string name="min">minutes</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="title_activity_notes">Notes</string>
    <string name="plus">+</string>
    <string name="title_activity_new_note">NewNote</string>
    <string name="new_note">New Note</string>
    <string name="content">Content:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="sec">sec</string>
    <string name="title_activity_existing_project">ExistingProject</string>
    <string name="title_activity_project_note_list">ProjectNoteList</string>
    <string name="title_activity_project_video_list">ProjectVideoList</string>
    <string name="title_activity_project_tab_host">ProjectTabHost</string>
    <string name="facebook">Share with Facebook</string>
    <string name="app_id">367697556675011</string>
    <string name="get_started">To get started, log in using your Facebook account</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="logout">Log out</string>
    <string name="welcome">Welcome, you are now logged in.</string>
    <string name="action_people">With whom?</string>
    <string name="action_people_default">Select friends</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="single_user_selected">%1$s</string>
    <string name="two_users_selected">%1$s and %2$s</string>
    <string name="multiple_users_selected">%1$s and %2$s others</string>
    <string name="action_location">Where are you?</string>
    <string name="action_location_default">Select one</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="action_have">What are you doing?</string>
    <string name="action_have_default">Select One</string>
    <string name="select_speech">Selece a type</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_button_text">Thanks!</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="result_dialog_text">Posted Open Graph action, id: %1$s</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="progress_dialog_text">Announcing, please wait</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="title_activity_record_video">RecordVideo</string>

    <string-array name="talk_types">
        <item>Speech</item>
        <item>Presentation</item>
        <item>Rehearsal</item>
        <item>Talk</item>
    </string-array>
    <string-array name="talk_og_urls">
        <item>https://enigmatic-chamber-2722.herokuapp.com/speech.php</item>
        <item>https://enigmatic-chamber-2722.herokuapp.com/presentation.php</item>
        <item>https://enigmatic-chamber-2722.herokuapp.com/rehearsal.php</item>
        <item>https://enigmatic-chamber-2722.herokuapp.com/talk.php</item>
    </string-array>

    <string name="announce">Announce</string>
    <string name="title_activity_display_note">DisplayNote</string>
    <string name="icon">icon</string>
    <string name="startbutton">Start</string>
    <string name="next_note">Next note:</string>
    <string name="current_note">Current note:</string>
    <string name="total_time">Total time:</string>
    <string name="sec">sec</string>
    <string name="edit_note">Edit Note</string>
    <string name="cancel">Cancel</string>
    <string name="my_projects">My Projects</string>
    <string name="videos">Videos</string>
    <string name="title_activity_relax">RelaxActivity</string>
    <string name="relax">Do Something to Relax</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="sea_sound">Sea sound</string>
    <string name="sea_sound2">The sound of wave</string>
    <string name="forest_sound">Forest sound</string>
    <string name="forest_sound2">The sound make you feel in the forest</string>
    <string name="title_activity_forest">ForestActivity</string>
    <string name="title_activity_sea">SeaActivity</string>
    <string name="night_sound">Night sound</string>
    <string name="night_sound2">The sound of silent night</string>
    <string name="title_activity_night">NightActivity</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="play">Play</string>
    <string name="email">Share with your Email</string>
    <string name="title_activity_little_game">LittleGameActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="little_game">Gravity Ball Game</string>
    <string name="new_game">Coming soon!</string>
    <string name="some_new_game">New games</string>
    <string name="some_new_game2">We will update for new games later</string>
    <string name="little_game2">This is a little game may help you relax</string>
    <string name="new_game2">Thank you for your support of our app!</string>
    <string name="title_activity_notification">Notification</string>
    <string name="end_time">End time:</string>
    <string name="start_time">Start time:</string>
    <string name="pre_date">Presentation date:</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
  

</resources>