<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewNote" >

    <TextView
        android:id="@+id/edittv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editNoteDone"
        android:layout_below="@+id/editNoteDone"
        android:layout_marginTop="40dp"
        android:text="@string/content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/edittv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittv1"
        android:layout_below="@+id/editNoteContentText"
        android:layout_marginTop="19dp"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/edittv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editStartTime"
        android:layout_toRightOf="@+id/editStartTime"
        android:text="@string/sec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/editNoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editNoteDone"
        android:layout_alignBottom="@+id/editNoteDone"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_note"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editNoteContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittv1"
        android:layout_below="@+id/edittv1"
        android:ems="10" 
        android:inputType="text"/>

    <TextView
        android:id="@+id/edittv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editEndTime"
        android:layout_below="@+id/editStartTime"
        android:layout_marginTop="28dp"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editStartTime"
        android:layout_below="@+id/edittv3"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/editStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittv2"
        android:layout_below="@+id/edittv2"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/editNoteDone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/done" />

    <TextView
        android:id="@+id/edittv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editEndTime"
        android:layout_alignLeft="@+id/edittv4"
        android:text="@string/sec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/editNoteCancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/cancel" />

</RelativeLayout>