<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewProject" >

    <Button
        android:id="@+id/newProjectDone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/done" />

    <Button
        android:id="@+id/newProjectBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back" />

    <TextView
        android:id="@+id/editNoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newProjectBack"
        android:layout_below="@+id/newProjectBack"
        android:layout_marginTop="48dp"
        android:text="@string/project_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/projectNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editNoteTextView"
        android:layout_below="@+id/editNoteTextView"
        android:ems="10" 
        android:inputType="text"/>

    <TextView
        android:id="@+id/edittv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/projectNameText"
        android:layout_below="@+id/projectNameText"
        android:layout_marginTop="16dp"
        android:text="@string/speech_length"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/speechLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittv1"
        android:layout_below="@+id/edittv1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/edittv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/speechLengthText"
        android:layout_toRightOf="@+id/speechLengthText"
        android:text="@string/min"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>