<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGameActivity" >

        <Button
        android:id="@+id/newGameBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back" />

   

    <TextView
        android:id="@+id/NewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newGameBack"
        android:layout_alignBottom="@+id/newGameBack"
        android:layout_centerHorizontal="true"
        android:text="@string/some_new_game" 
       
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newGameBack"
        android:layout_below="@+id/textView1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/new_game2"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newGameBack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/new_game"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="serif" />

</RelativeLayout>