<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    tools:context=".RecordVideo" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:id="@+id/startRecord"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/recordBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stopRecord"
        android:layout_alignBottom="@+id/stopRecord"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/stopRecord"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startRecord"
        android:layout_alignBottom="@+id/startRecord"
        android:layout_centerHorizontal="true"
        android:text="@string/done" />

    <TextView
        android:id="@+id/nextNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startRecord"
        android:layout_alignLeft="@+id/startRecord"
        android:layout_marginBottom="44dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextNoteText"
        android:layout_alignLeft="@+id/nextNoteText"
        android:text="@string/next_note"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/currenNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currenNoteText"
        android:layout_alignLeft="@+id/currenNoteText"
        android:text="@string/current_note"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/recordTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>