<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjectVideoList" >

    <Button
        android:id="@+id/projectVideoBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/addVideo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/plus" />

    <TextView
        android:id="@+id/editNoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/projectVideoBack"
        android:layout_alignBottom="@+id/projectVideoBack"
        android:layout_centerHorizontal="true"
        android:text="@string/videos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/videoListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/projectVideoBack"
        android:layout_below="@+id/projectVideoBack"
        android:background="@drawable/listview" >
    </ListView>

</RelativeLayout>