<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjectNoteList" >

    <Button
        android:id="@+id/projectNoteBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/addNote"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/plus" />

    <TextView
        android:id="@+id/editNoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/projectNoteBack"
        android:layout_alignBottom="@+id/projectNoteBack"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_notes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/tabHostListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/projectNoteBack"
        android:layout_below="@+id/projectNoteBack" 
        android:background="@drawable/listview">
    </ListView>

</RelativeLayout>