<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303040"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/myProjects"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/facebook"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

    <ImageButton
        android:id="@+id/presentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/facebook"
        android:contentDescription="@string/presentation"
        android:src="@drawable/ic_launcher2" />

    <ImageButton
        android:id="@+id/myProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/facebook"
        android:layout_centerVertical="true"
        android:contentDescription="@string/myProjects"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myProjects"
        android:layout_below="@+id/myProjects"
        android:text="My Project"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginRight="41dp"
        android:layout_toLeftOf="@+id/textView3"
        android:text="Presentation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>